log/build_2025-09-13_14-25-49/multi_robot_challenge_23/stderr.log
  File "/home/rocotics/DAT160_semester_oppgave/install/multi_robot_challenge_23/lib/python3.8/site-packages/multi_robot_challenge_23/controller.py", line 62
    if self.front_min < detect_range
                                   ^
SyntaxError: invalid syntax

